feat: implement bfs